--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.15",
     "mongodb": "^6.10.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
